--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
       <version>1.9.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.6.15.Final</version>
+    </dependency>
+
   </dependencies>
 
   <build>
